docs/guides/lora-serving/00_existing_lora_support/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lora-serving-route
spec:
  parentRefs:
  - name: REPLACE_ME_GATEWAY_NAME
    namespace: REPLACE_ME_GATEWAY_NAMESPACE
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: qwen2-lora-inference-pool
      port: 8000
